--- a/pom.xml
+++ b/pom.xml
@@ -4,9 +4,10 @@
   <parent>
     <groupId>org.jenkins-ci.plugins</groupId>
     <artifactId>plugin</artifactId>
-    <version>1.532</version>
+    <version>4.3</version>
+    <relativePath />
   </parent>
-  
+
   <artifactId>gravatar</artifactId>
   <version>2.2-SNAPSHOT</version>
   <packaging>hpi</packaging>
@@ -39,7 +40,7 @@
       <timezone>-5</timezone>
     </contributor>
     <contributor>
-      <name>Simon Schlachter</name>
+      <name>Simon Gamma</name>
       <email>github@survive.ch</email>
       <timezone>+1</timezone>
     </contributor>
@@ -58,121 +59,70 @@
   </issueManagement>
   
   <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <powermock.version>1.5</powermock.version>
-    <guava.version>13.0.1</guava.version>
+    <powermock.version>1.6.1</powermock.version>
+    <jenkins.version>2.222.1</jenkins.version>
+    <java.level>8</java.level>
   </properties>
 
-   <build>
-     <pluginManagement>
-       <plugins>
-         <plugin>
-           <artifactId>maven-compiler-plugin</artifactId>
-           <version>2.3.2</version>
-         </plugin>
-         <plugin>
-           <artifactId>maven-deploy-plugin</artifactId>
-           <version>2.5</version>
-         </plugin>
-         <plugin>
-           <artifactId>maven-install-plugin</artifactId>
-           <version>2.3.1</version>
-         </plugin>
-       </plugins>
-     </pluginManagement>
-     <plugins>
-       <plugin>
-         <artifactId>maven-release-plugin</artifactId>
-         <version>2.5</version>
-         <configuration>
-           <goals>deploy</goals>
-         </configuration>
-       </plugin>
-     </plugins>
-   </build>
 
-  
   <dependencies>
     <dependency>
-      <groupId>de.bripkens</groupId> 
-      <artifactId>gravatar4java</artifactId> 
-      <version>1.1</version> 
+      <groupId>de.bripkens</groupId>
+      <artifactId>gravatar4java</artifactId>
+      <version>1.2</version>
+    </dependency>
+    <dependency>
+      <groupId>cglib</groupId>
+      <artifactId>cglib-nodep</artifactId>
+      <version>2.2.2</version>
+      <scope>test</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>org.powermock</groupId>
+      <artifactId>powermock-module-junit4</artifactId>
+      <version>${powermock.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.powermock</groupId>
+      <artifactId>powermock-api-mockito</artifactId>
+      <version>${powermock.version}</version>
+      <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>com.google.guava</groupId>
-      <artifactId>guava</artifactId>
-      <version>${guava.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.11</version>
+      <artifactId>guava-testlib</artifactId>
+      <version>11.0.1</version>
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>org.hamcrest</groupId>
-      <artifactId>hamcrest-core</artifactId>
-      <version>1.3</version>
-      <scope>test</scope>
+      <groupId>org.jenkins-ci.plugins</groupId>
+      <artifactId>mailer</artifactId>
+      <version>1.5</version>
     </dependency>
-    <dependency>
-      <groupId>org.mockito</groupId>
-      <artifactId>mockito-core</artifactId>
-      <version>1.9.5</version>
-      <scope>test</scope>
-    </dependency>
-      <dependency>
-          <groupId>cglib</groupId>
-          <artifactId>cglib-nodep</artifactId>
-          <version>2.2.2</version>
-          <scope>test</scope>
-      </dependency>
-
-      <dependency>
-          <groupId>org.powermock</groupId>
-          <artifactId>powermock-module-junit4</artifactId>
-          <version>${powermock.version}</version>
-          <scope>test</scope>
-      </dependency>
-      <dependency>
-          <groupId>org.powermock</groupId>
-          <artifactId>powermock-api-mockito</artifactId>
-          <version>${powermock.version}</version>
-          <scope>test</scope>
-      </dependency>
-      <dependency>
-          <groupId>com.google.guava</groupId>
-          <artifactId>guava-testlib</artifactId>
-          <version>${guava.version}</version>
-          <scope>test</scope>
-      </dependency>
-      <dependency>
-          <groupId>org.jenkins-ci.plugins</groupId>
-          <artifactId>mailer</artifactId>
-          <version>1.5</version>
-      </dependency>
   </dependencies>
 
-    <repositories>
-        <repository>
-            <id>repo.jenkins-ci.org</id>
-            <url>https://repo.jenkins-ci.org/public/</url>
-        </repository>
-        <repository>
-            <releases><enabled>true</enabled></releases>
-            <snapshots><enabled>false</enabled></snapshots>
-            <id>truth-github</id>
-            <name>Truth Github Repository</name>
-            <url>https://raw.github.com/truth0/repo/master</url>
-        </repository>
-    </repositories>
+  <repositories>
+    <repository>
+      <id>repo.jenkins-ci.org</id>
+      <url>https://repo.jenkins-ci.org/public/</url>
+    </repository>
+    <repository>
+      <releases><enabled>true</enabled></releases>
+      <snapshots><enabled>false</enabled></snapshots>
+      <id>truth-github</id>
+      <name>Truth Github Repository</name>
+      <url>https://raw.github.com/truth0/repo/master</url>
+    </repository>
+  </repositories>
 
-    <pluginRepositories>
-        <pluginRepository>
-            <id>repo.jenkins-ci.org</id>
-            <url>https://repo.jenkins-ci.org/public/</url>
-        </pluginRepository>
-    </pluginRepositories>
+  <pluginRepositories>
+    <pluginRepository>
+      <id>repo.jenkins-ci.org</id>
+      <url>https://repo.jenkins-ci.org/public/</url>
+    </pluginRepository>
+  </pluginRepositories>
 </project>  
   
 
