--- a/pom.xml
+++ b/pom.xml
@@ -1,25 +1,26 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   
   <parent>
     <groupId>org.jenkins-ci.plugins</groupId>
     <artifactId>plugin</artifactId>
-    <version>4.24</version>
+    <version>4.72</version>
     <relativePath />
   </parent>
 
   <artifactId>gravatar</artifactId>
-  <version>2.3-SNAPSHOT</version>
+  <version>${revision}${changelist}</version>
   <packaging>hpi</packaging>
   
   <name>Jenkins Gravatar plugin</name>
   <description>This plugin shows Gravatar avatar images for Jenkins users.</description>
-  <url>https://github.com/jenkinsci/gravatar-plugin</url>
+  <url>https://github.com/jenkinsci/${project.artifactId}-plugin</url>
   
   <licenses>
     <license>
       <name>MIT</name>
-      <url>http://www.opensource.org/licenses/mit-license.php</url>
+      <url>https://opensource.org/license/mit/</url>
       <comments>Copyright 2011 Erik Ramfelt. All rights reserved.</comments>
     </license>
   </licenses>
@@ -47,10 +48,10 @@
   </contributors>
   
   <scm>
-    <connection>scm:git:ssh://github.com/jenkinsci/gravatar-plugin.git</connection>
-    <developerConnection>scm:git:ssh://git@github.com/jenkinsci/gravatar-plugin.git</developerConnection>
-    <url>http://github.com/jenkinsci/gravatar-plugin</url>
-    <tag>HEAD</tag>
+    <connection>scm:git:https://github.com/${gitHubRepo}.git</connection>
+    <developerConnection>scm:git:git@github.com:${gitHubRepo}.git</developerConnection>
+    <url>https://github.com/${gitHubRepo}</url>
+    <tag>${scmTag}</tag>
   </scm>
   
   <issueManagement>
@@ -59,21 +60,44 @@
   </issueManagement>
   
   <properties>
-    <jenkins.version>2.222.1</jenkins.version>
-    <java.level>8</java.level>
+    <revision>2.3</revision>
+    <changelist>-SNAPSHOT</changelist>
+    <jenkins.version>2.387.3</jenkins.version>
+    <gitHubRepo>jenkinsci/gravatar-plugin</gitHubRepo>
   </properties>
 
+  <dependencyManagement>
+    <dependencies>
+      <dependency>
+        <groupId>io.jenkins.tools.bom</groupId>
+        <artifactId>bom-2.387.x</artifactId>
+        <version>2357.v1043f8578392</version>
+        <scope>import</scope>
+        <type>pom</type>
+      </dependency>
+    </dependencies>
+  </dependencyManagement>
 
   <dependencies>
     <dependency>
       <groupId>de.bripkens</groupId>
       <artifactId>gravatar4java</artifactId>
       <version>1.2</version>
+      <exclusions>
+        <exclusion>
+          <!-- Provided by core -->
+          <groupId>commons-codec</groupId>
+          <artifactId>commons-codec</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
     <dependency>
-      <groupId>cglib</groupId>
-      <artifactId>cglib-nodep</artifactId>
-      <version>2.2.2</version>
+      <groupId>org.jenkins-ci.plugins</groupId>
+      <artifactId>mailer</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava-testlib</artifactId>
       <scope>test</scope>
     </dependency>
 
@@ -86,27 +110,6 @@
       <groupId>org.mockito</groupId>
       <artifactId>mockito-core</artifactId>
       <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.powermock</groupId>
-      <artifactId>powermock-module-junit4</artifactId>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.powermock</groupId>
-      <artifactId>powermock-api-mockito2</artifactId>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>com.google.guava</groupId>
-      <artifactId>guava-testlib</artifactId>
-      <version>11.0.1</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.jenkins-ci.plugins</groupId>
-      <artifactId>mailer</artifactId>
-      <version>1.5</version>
     </dependency>
   </dependencies>
 
