--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
   </parent>
 
   <artifactId>gravatar</artifactId>
-  <version>${revision}${changelist}</version>
+  <version>${changelist}</version>
   <packaging>hpi</packaging>
   
   <name>Jenkins Gravatar plugin</name>
@@ -30,6 +30,12 @@
       <id>redsolo</id>
       <name>Erik Ramfelt</name>
       <email>eramfelt@gmail.com</email>
+      <timezone>+1</timezone>
+    </developer>
+    <developer>
+      <id>viceice</id>
+      <name>Michael Kriese</name>
+      <email>michael.kriese@visualon.de</email>
       <timezone>+1</timezone>
     </developer>
   </developers>
@@ -55,13 +61,12 @@
   </scm>
   
   <issueManagement>
-    <system>JIRA</system>
-    <url>http://issues.jenkins-ci.org/secure/IssueNavigator.jspa?reset=true&amp;jqlQuery=project+%3D+Jenkins+AND+component+%3D+gravatar+AND+resolution+%3D+Unresolved</url>
+    <system>Github</system>
+    <url>https://github.com/${gitHubRepo}/issues</url>
   </issueManagement>
   
   <properties>
-    <revision>2.3</revision>
-    <changelist>-SNAPSHOT</changelist>
+    <changelist>999999-SNAPSHOT</changelist>
     <jenkins.version>2.387.3</jenkins.version>
     <gitHubRepo>jenkinsci/gravatar-plugin</gitHubRepo>
   </properties>
@@ -117,13 +122,6 @@
     <repository>
       <id>repo.jenkins-ci.org</id>
       <url>https://repo.jenkins-ci.org/public/</url>
-    </repository>
-    <repository>
-      <releases><enabled>true</enabled></releases>
-      <snapshots><enabled>false</enabled></snapshots>
-      <id>truth-github</id>
-      <name>Truth Github Repository</name>
-      <url>https://raw.github.com/truth0/repo/master</url>
     </repository>
   </repositories>
 
