--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  
+
   <parent>
     <groupId>org.jenkins-ci.plugins</groupId>
     <artifactId>plugin</artifactId>
@@ -12,11 +12,11 @@
   <artifactId>gravatar</artifactId>
   <version>${changelist}</version>
   <packaging>hpi</packaging>
-  
+
   <name>Jenkins Gravatar plugin</name>
   <description>This plugin shows Gravatar avatar images for Jenkins users.</description>
   <url>https://github.com/jenkinsci/${project.artifactId}-plugin</url>
-  
+
   <licenses>
     <license>
       <name>MIT</name>
@@ -24,7 +24,7 @@
       <comments>Copyright 2011 Erik Ramfelt. All rights reserved.</comments>
     </license>
   </licenses>
-  
+
   <developers>
     <developer>
       <id>redsolo</id>
@@ -39,7 +39,7 @@
       <timezone>+1</timezone>
     </developer>
   </developers>
-  
+
   <contributors>
     <contributor>
       <name>David M. Carr</name>
@@ -52,23 +52,24 @@
       <timezone>+1</timezone>
     </contributor>
   </contributors>
-  
+
   <scm>
     <connection>scm:git:https://github.com/${gitHubRepo}.git</connection>
     <developerConnection>scm:git:git@github.com:${gitHubRepo}.git</developerConnection>
-    <url>https://github.com/${gitHubRepo}</url>
     <tag>${scmTag}</tag>
+    <url>https://github.com/${gitHubRepo}</url>
   </scm>
-  
+
   <issueManagement>
     <system>Github</system>
     <url>https://github.com/${gitHubRepo}/issues</url>
   </issueManagement>
-  
+
   <properties>
     <changelist>999999-SNAPSHOT</changelist>
     <jenkins.version>2.440.3</jenkins.version>
     <gitHubRepo>jenkinsci/gravatar-plugin</gitHubRepo>
+    <spotless.check.skip>false</spotless.check.skip>
   </properties>
 
   <dependencyManagement>
@@ -77,8 +78,8 @@
         <groupId>io.jenkins.tools.bom</groupId>
         <artifactId>bom-2.440.x</artifactId>
         <version>3180.vc1df4d5b_8097</version>
-        <scope>import</scope>
         <type>pom</type>
+        <scope>import</scope>
       </dependency>
     </dependencies>
   </dependencyManagement>
@@ -131,6 +132,4 @@
       <url>https://repo.jenkins-ci.org/public/</url>
     </pluginRepository>
   </pluginRepositories>
-</project>  
-  
-
+</project>
