--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,7 @@
     <gitHubRepo>jenkinsci/gravatar-plugin</gitHubRepo>
     <spotless.check.skip>false</spotless.check.skip>
     <hpi.strictBundledArtifacts>true</hpi.strictBundledArtifacts>
-    <hpi.bundledArtifacts />
+    <hpi.bundledArtifacts>gravatar4java</hpi.bundledArtifacts>
   </properties>
 
   <dependencyManagement>
