--- a/pom.xml
+++ b/pom.xml
@@ -37,8 +37,7 @@
     <revision>211</revision>
     <changelist>999999-SNAPSHOT</changelist>
     <jenkins.baseline>2.516</jenkins.baseline>
-    <!-- TODO https://github.com/jenkinsci/jenkins/pull/11269 -->
-    <jenkins.version>2.537-rc37714.d5718019b_8ff</jenkins.version>
+    <jenkins.version>2.539</jenkins.version>
     <gitHubRepo>jenkinsci/gravatar-plugin</gitHubRepo>
     <spotless.check.skip>false</spotless.check.skip>
     <ban-junit4-imports.skip>false</ban-junit4-imports.skip>
